--- a/cicd/ci/Jenkinsfile
+++ b/cicd/ci/Jenkinsfile
@@ -1,39 +1,47 @@
-pipeline{
+pipeline {
     agent any
 
     environment {
-        GITHUB_CREDENTIAL_ID = 'github-token'
-        REPO_URL = 'https://github.com/mayur0601/exchangerates.git'
+        GITHUB_CREDENTIALS_ID = 'github-token'
+        REPO_URL = 'https://github.com/kodedge-swapneel/exchangerates.git'
         SONAR_AUTH_TOKEN = credentials('sonarqube')
         DOCKER_CREDENTIALS_ID = 'docker-hub-credentials'
-        IMAGE_NAME = 'mayur0601/exchangerates'
+        IMAGE_NAME = 'kodedge/exchangerates'
+
+        //following is not required. You can skip.
+        GRADLE_HOME = '/opt/gradle'
+        PATH = "$GRADLE_HOME/bin:$PATH"
+
+
     }
 
     stages {
-        stage('Checkout'){
+        stage('Checkout') {
             steps {
                 script {
                     checkout([
                         $class: 'GitSCM',
                         branches: [[name: '*/main']],
                         userRemoteConfigs: [
-                            url: REPO_URL,
-                            credentialsId:GITHUB_CREDENTIAL_ID
+                            [
+                                url: REPO_URL,
+                                credentialsId: GITHUB_CREDENTIALS_ID
+                            ]
                         ]
                     ])
                 }
             }
         }
 
-        stage('Build'){
+        stage('Build') {
             steps {
                 script {
-                    sh './gradlew build -x test-x runSmokeTest'
+                    sh './gradlew build -x test -x runSmokeTest'
                 }
             }
         }
 
-        stage('Unit Test'){
+        stage('Unit Test') {
             steps {
                 script {
                     sh './gradlew test'
@@ -41,7 +49,7 @@ pipeline{
             }
         }
 
-        stage('Smoke Test'){
+        stage('Smoke Test') {
             steps {
                 script {
                     sh './gradlew runSmokeTest'
@@ -49,7 +57,7 @@ pipeline{
             }
         }
 
-        stage('Code Analysis'){
+        stage('Code Analysis') {
             steps {
                 script {
                     withSonarQubeEnv('SonarQube') {
@@ -57,21 +65,22 @@ pipeline{
                     }
 
                     def qualityGate = waitForQualityGate()
-                    if(qualityGate.status != 'OK'){
+                    if (qualityGate.status != 'OK') {
                         error "SonarQube Quality Gate failed: ${qualityGate.status}"
-                    }else{
-                        echo "SonarQube Quality Gate Passed. "
+                    } else {
+                        echo "SonarQube Quality Gate passed."
                     }
                 }
             }
         }
 
-        stage('Build and push Docker image'){
+        stage('Build and Push docker image') {
             steps {
                 script {
-                    def commitHash = sh(script: 'git rev-parse --short HEAD',returnStdout:true).trim()
+                    def commitHash = sh(script: 'git rev-parse --short HEAD', returnStdout: true).trim()
 
-                    def imageTag = ${commitHash}
+                    // Define the Docker image tag as the commit hash
+                    def imageTag = "${commitHash}"
 
                     echo "Image tag : ${imageTag}"
 
@@ -79,9 +88,9 @@ pipeline{
 
                     echo "Image name with tag : ${imageNameWithTag}"
 
-                    echo "push image into docker hub"
+                    echo "Push image in docker hub"
 
-                    docker.withRegistry('https://index.docker.io/v1/',DOCKER_CREDENTIALS_ID) {
+                    docker.withRegistry('https://index.docker.io/v1/', DOCKER_CREDENTIALS_ID) {
                         def image = docker.build(imageNameWithTag)
                         image.push()
                     }
@@ -91,33 +100,31 @@ pipeline{
             }
         }
 
-        stage('Deploy on Dev'){
+        stage('Deploy on Dev') {
             steps {
                 script {
-                    def containerName="exchangerates-container"
-                    def imageTag=env.COMMIT_HASH
+                    def containerName = "exchangerates-container"
+                    def imageTag = env.COMMIT_HASH
 
-                    // check if container is running, then stop and remove it.
-
+                    // Check if the container is running, then stop and remove it
                     sh """
-                        if [\$(docker ps-q -f name=${containerName})]; then
-                            echo "Stopping and moving existing container..."
+                        if [ \$(docker ps -q -f name=${containerName}) ]; then
+                            echo "Stopping and removing existing container..."
                             docker stop ${containerName}
                             docker rm ${containerName}
                         fi
                     """
 
-                    //Run the new container
-
+                    // Run the new container
                     sh """
-                        echo "Running new container with image tag ${mageTag}..."
+                        echo "Running new container with image tag ${imageTag}..."
                         docker run -d --name ${containerName} -p 8090:8080 ${IMAGE_NAME}:${imageTag}
                     """
                 }
             }
         }
 
-        stage('Health check on Dev'){
+        stage('Health check on Dev') {
             steps {
                 script {
                     echo "Performing health check on Docker container..."
@@ -137,26 +144,55 @@ pipeline{
                     echo "Health Status: ${status}"
 
                     if (status == 'UP') {
-                           echo 'Health check passed: Application is healthy.'
+                        echo 'Health check passed: Application is healthy.'
                     } else {
-                           error 'Health check failed: Application is not healthy.'
+                        error 'Health check failed: Application is not healthy.'
                     }
+
                 }
             }
         }
 
-        post {
-            always {
-                echo 'Clean up workspace after build'
-                cleanWs()
-            }
+        stage('Update image tag') {
+            steps {
+                script {
+                    def imageTag = env.COMMIT_HASH
 
-            success {
-                echo 'Pipeline successful!'
-            }
+                     sh 'git checkout main'
 
-            failure {
-                echo 'Pipeline failed!'
+                    // Use 'sed' to replace the image tag in values.yaml
+                    sh """
+                        sed -i 's/tag:.*/tag: ${imageTag}/' k8chart/values.yaml
+                    """
+
+                    withCredentials([
+                        gitUsernamePassword(credentialsId: GITHUB_CREDENTIALS_ID, gitToolName: 'Default')
+                    ]) {
+                        sh """
+                             git config user.email "kodedge-bot-ci@kodedge.com"
+                             git config user.name "kodedge-bot-ci"
+                             git add k8chart/values.yaml
+                             git commit -m "Update image tag to version ${imageTag}"
+                             git push origin main
+                        """
+                    }
+                }
             }
         }
+    }
+
+    post {
+        always {
+            echo 'Clean up workspace after build'
+            cleanWs()
+        }
+
+        success {
+            echo 'Pipeline successful!'
+        }
+
+        failure {
+            echo 'Pipeline failed!'
+        }
+    }
 }
