--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.5.3'
 	id 'io.spring.dependency-management' version '1.1.7'
+	id("org.sonarqube") version "5.1.0.4872"
 }
 
 group = 'com.ango'
@@ -47,6 +48,14 @@ tasks.register('runsmokeTest',Test){
 	group 'verification'
 	description = 'run all tests from smoke-test modules'
 	dependsOn 'smoke-test:test'
+}
+
+sonarqube {
+	properties {
+		property "sonar.projectKey", "excchangerates-sonar"
+		property "sonar.projectName", "excchangerates"
+		property "sonar.host.url", "http://localhost:9001"
+	}
 }
 
 
