setting up argoCD pipeline.

--- a/cicd/ci/Jenkinsfile
+++ b/cicd/ci/Jenkinsfile
@@ -132,6 +132,31 @@ pipeline {
                 }
             }
         }
+
+        stage('Update image tag'){
+            steps {
+                script {
+                    def imageTag = env.COMMIT_HASH
+                    sh 'git checkout main'
+                    // Use 'sed' to replace the image tag in values.yaml
+                    sh """
+                        sed -i 's/tag:.*/tag: ${imageTag}/' k8chart/values.yaml
+                    """
+                    withCredentials([
+                               gitUsernamePassword(credentialsId: GITHUB_CREDENTIALS_ID, gitToolName: 'Default')
+                    ]){
+                        sh """
+                             git config user.email "shindemayur0601@gmail.com"
+                             git config user.name "mayur0601"
+                             git add k8chart/values.yaml
+                             git commit -m "Update image tag to version ${imageTag}"
+                             git push origin main
+                        """
+                    }
+
+                }
+            }
+        }
     }
 
     post {
